--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -31,6 +31,8 @@
         "\n",
         "Fine-tuning effectively mitigates common RAG challenges, like the LLM referring to the context using phrases such as \"The context does not provide information about this.\" This enhancement is notable even when we had incorporated directives in the system message to deter such references, like \"2. Avoid phrases such as 'Based on the context, ...' or 'The context information ...'.\" (see Llama Index default prompt later).\n",
         "\n",
+        "You can also browse the [datasets hosted with Argilla Hugging Face Spaces](https://huggingface.co/spaces/argilla/fine-tune-chat-gpt). User and password: argilla / 12345678. The dataset for this stage is `customer-assistant` and for the evaluation step is `finetuned-vs-base-preference`.\n",
+        "\n",
         "\n",
         "![Human preference](../../../_static/images/llms/fine-tuning-openai-rag-feedback/preference-fine-tuned.png \"Fine-tuned model vs base model response\")\n",
         "\n",
@@ -295,37 +297,6 @@
         "Now, the dataset is available for collecting feedback with the Argilla UI. Here's a video showing the workflow for labelers:\n",
         "\n",
         "<iframe width=\"100%\" height=\"450\" src=\"https://www.youtube.com/embed/UoMZOxFXfKI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "You can also browse and play with the datasets (hosted with Argilla Hugging Face Spaces). User and password: argilla / 12345678. The dataset for this stage is `customer-assistant` and for the evaluation step is `finetuned-vs-base-preference`."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<iframe src=\"https://argilla-fine-tune-chat-gpt.hf.space\" frameborder=\"0\" width=\"100%\" height=\"800\"></iframe>\n"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
-      "source": [
-        "%%html \n",
-        "<iframe src=\"https://argilla-fine-tune-chat-gpt.hf.space\" frameborder=\"0\" width=\"100%\" height=\"800\"></iframe>"
       ]
     },
     {
