--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -498,7 +498,7 @@
       "outputs": [],
       "source": [
         "# generate responses with base model\n",
-        "index = VectorStoreIndex.from_documents(documents, service_context=base_context)\n",
+        "index = VectorStoreIndex.from_documents(documents, service_context=gpt_35_context)\n",
         "query_engine = index.as_query_engine(similarity_top_k=2)\n",
         "\n",
         "contexts = []\n",
@@ -517,7 +517,10 @@
       },
       "outputs": [],
       "source": [
-        "# generate responses with ft model\n",
+        "# generate responses with ft model: replace with the id of your ft model\n",
+        "ft_context = ServiceContext.from_defaults(\n",
+        "    llm=OpenAI(model=\"ft:gpt-3.5-turbo-...\", temperature=0.3)\n",
+        ")\n",
         "index = VectorStoreIndex.from_documents(documents, service_context=ft_context)\n",
         "query_engine = index.as_query_engine(similarity_top_k=2)\n",
         "\n",
