Docs: Final revision OpenAI fine-tuning tutorial (#3681)
# Argilla Community Growers

Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged.

# Pull Request Templates

Please go the the `Preview` tab and select the appropriate sub-template:

* [🐞-bug](?expand=1&template=bug.md)
* [📚-documentation](?expand=1&template=docs.md)
* [🆕-features](?expand=1&template=features.md)
* [🔗-💥-integration](?expand=1&template=integration.md)

# Generic Pull Request Template

Please include a summary of the changes and the related issue. Please
also include relevant motivation and context. List any dependencies that
are required for this change.

Closes #<issue_number>

**Type of change**

(Please delete options that are not relevant. Remember to title the PR
according to the type of change)

- [ ] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] Refactor (change restructuring the codebase without changing
functionality)
- [ ] Improvement (change adding some improvement to an existing
functionality)
- [ ] Documentation update

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes. And
ideally, reference `tests`)

- [ ] Test A
- [ ] Test B

**Checklist**

- [ ] I added relevant documentation
- [ ] follows the style guidelines of this project
- [ ] I did a self-review of my code
- [ ] I made corresponding changes to the documentation
- [ ] My changes generate no new warnings
- [ ] I have added tests that prove my fix is effective or that my
feature 

--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -13,10 +13,10 @@
         "\n",
         "It includes the following steps:\n",
         "\n",
-        "- Setting up a RAG pipeline using LlamaIndex and Unstructured.\n",
-        "- Generating questions with LlamaIndex\n",
-        "- Building a dataset for collecting human demonstrations with Argilla\n",
-        "- Fine-tuning GPT3.5-turbo with demonstration data\n",
+        "- Setting up a RAG pipeline using [LlamaIndex](https://github.com/jerryjliu/llama_index) and [Unstructured](https://github.com/Unstructured-IO/unstructured) to answer questions using a document about Argilla Cloud.\n",
+        "- Generating potential questions with LlamaIndex to build a training and test set.\n",
+        "- Building a dataset for collecting human written responses with Argilla.\n",
+        "- Fine-tuning GPT3.5-turbo with high-quality data.\n",
         "- Evaluating the fine-tuned model vs the base model with human preference data from Argilla.\n",
         "\n",
         "The goal of the tutorial is to demonstrate how to incorporate human feedback into your LLM development for two critical stages: \n",
@@ -27,9 +27,11 @@
         "\n",
         "Given the ongoing debate between Retrieval Augmented Generation (RAG) and fine-tuning, we selected a real-world RAG use case to demonstrate how fine-tuning enhances the style, utility, and relevance of responses within a RAG application. The resulting system will be Hybrid RAG system (RAG using fine-tuned models) as [described in this article](https://towardsdatascience.com/rag-vs-finetuning-which-is-the-best-tool-to-boost-your-llm-application-94654b1eaba7). \n",
         "\n",
-        "The screenshot below displays the evaluation dataset, termed the \"human preference dataset.\" In it, `response-1` is produced by the fine-tuned model, while `response-2` comes from the base GPT-3.5 model. With just minor fine-tuning and without altering the system message, we've directed the LLM's behavior towards generating responses that are more helpful, faithful, friendly, and aligned with our brand.\n",
+        "The screenshot below displays the evaluation dataset, termed the \"human preference dataset.\" In it, `response-a` is produced by the fine-tuned model, while `response-b` comes from the base GPT-3.5 model. With just minor fine-tuning and without altering the system message, we've directed the LLM's behavior towards generating responses that are more helpful, faithful, friendly, and aligned with our brand.\n",
         "\n",
         "Fine-tuning effectively mitigates common RAG challenges, like the LLM referring to the context using phrases such as \"The context does not provide information about this.\" This enhancement is notable even when we had incorporated directives in the system message to deter such references, like \"2. Avoid phrases such as 'Based on the context, ...' or 'The context information ...'.\" (see Llama Index default prompt later).\n",
+        "\n",
+        "You can also browse the [datasets hosted with Argilla Hugging Face Spaces](https://huggingface.co/spaces/argilla/fine-tune-chat-gpt). User and password: argilla / 12345678. The dataset for this stage is `customer-assistant` and for the evaluation step is `finetuned-vs-base-preference`.\n",
         "\n",
         "\n",
         "![Human preference](../../../_static/images/llms/fine-tuning-openai-rag-feedback/preference-fine-tuned.png \"Fine-tuned model vs base model response\")\n",
@@ -307,7 +309,9 @@
         "## Prepare Argilla dataset for fine-tuning\n",
         "\n",
         "\n",
-        "We now read the responses from Argilla and prepare the dataset for fine-tuning following the [fine-tuning format from OpenAI guides](https://platform.openai.com/docs/guides/fine-tuning)."
+        "We now read the responses from Argilla and prepare the dataset for fine-tuning following the [fine-tuning format from OpenAI guides](https://platform.openai.com/docs/guides/fine-tuning).\n",
+        "\n",
+        "We use the a quick adaptation of LlamaIndex's `TEXT_QA_PROMPT` system prompt and the fine-tuned responses from our Argilla dataset."
       ]
     },
     {
@@ -330,7 +334,7 @@
       },
       "outputs": [],
       "source": [
-        "# adapation from LlamaIndex's TEXT_QA_PROMPT_TMPL_MSGS[1].content\n",
+        "# adaptation from LlamaIndex's TEXT_QA_PROMPT_TMPL_MSGS[1].content\n",
         "user_message_prompt =\"\"\"Context information is below.\n",
         "---------------------\n",
         "{context_str}\n",
@@ -494,7 +498,7 @@
       "outputs": [],
       "source": [
         "# generate responses with base model\n",
-        "index = VectorStoreIndex.from_documents(documents, service_context=base_context)\n",
+        "index = VectorStoreIndex.from_documents(documents, service_context=gpt_35_context)\n",
         "query_engine = index.as_query_engine(similarity_top_k=2)\n",
         "\n",
         "contexts = []\n",
@@ -513,7 +517,10 @@
       },
       "outputs": [],
       "source": [
-        "# generate responses with ft model\n",
+        "# generate responses with ft model: replace with the id of your ft model\n",
+        "ft_context = ServiceContext.from_defaults(\n",
+        "    llm=OpenAI(model=\"ft:gpt-3.5-turbo-...\", temperature=0.3)\n",
+        ")\n",
         "index = VectorStoreIndex.from_documents(documents, service_context=ft_context)\n",
         "query_engine = index.as_query_engine(similarity_top_k=2)\n",
         "\n",
@@ -536,7 +543,7 @@
         "\n",
         "If we show the fine-tuned model response always as the first option, we can introduce position bias (labelers always choosing a certain position) or making it evident to users there are two clearly different models.\n",
         "\n",
-        "To avoid this, we randomize the position and keep two metadata fields indicating which model has produced `response-1` and `response-2`. When collecting the responses, we'll use this medata to map the ranking with each model."
+        "To avoid this, we randomize the position and keep two metadata fields indicating which model has produced `response-a` and `response-b`. When collecting the responses, we'll use this metadata to map the ranking with each model."
       ]
     },
     {
@@ -594,10 +601,10 @@
         "\n",
         "You can read more about multi-user scenarios and built-in unification methods [on this guide](https://docs.argilla.io/en/latest/guides/llms/practical_guides/collect_responses.html).\n",
         "\n",
-        "With a very small evaluation set, we can see that the fine-tuned model responses are preferred 9 times (60%), base model responses 4 times, and they are both equally good or bad 2 times. \n",
+        "With a very small evaluation set, we can see that the fine-tuned model responses are preferred ~60% of the time, 3x over the base model, and they are both equally good or bad ~20% of the time. \n",
         "\n",
         "\n",
-        "Even with a very small fine-tuning and evaluation dataset, this already shows promising benefits of fine-tuning models for enhancing RAG systems.\n",
+        "Even with a very small fine-tuning and evaluation dataset, this already shows **promising benefits of fine-tuning models for enhancing RAG systems**.\n",
         "\n",
         "\n",
         "![Fine-tuned model vs base model](../../../_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")"
@@ -611,6 +618,7 @@
       },
       "outputs": [],
       "source": [
+        "# retrieve the dataset from Argilla\n",
         "dataset = rg.FeedbackDataset.from_argilla(name=\"finetuned-vs-base-preference\", workspace=\"admin\")\n",
         "\n",
         "win_rates = {\n",
@@ -619,6 +627,7 @@
         "  'tie': 0\n",
         "}\n",
         "\n",
+        "# compute the win and tie rates\n",
         "for record in dataset.records:\n",
         "  if len(record.responses) > 0:\n",
         "    for response in record.responses:\n",
@@ -632,7 +641,7 @@
         "      else:\n",
         "        win_rates['tie'] = win_rates['tie'] + 1\n",
         "win_rates\n",
-        "# {'ft_model': 9, 'base_model': 4, 'tie': 2}"
+        "# {'ft_model': 17, 'base_model': 6, 'tie': 5}"
       ]
     },
     {
@@ -644,7 +653,7 @@
       "outputs": [],
       "source": [
         "# let's make the labels more explicit\n",
-        "data = {'gpt3.5-fine-tuned': 9, 'gpt3.5-base': 4, 'tie': 2}\n",
+        "data = {'gpt3.5-fine-tuned': 17, 'gpt3.5-base': 6, 'tie': 5}\n",
         "total = sum(data.values())\n",
         "\n",
         "# Calculate percentages\n",
@@ -744,7 +753,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
