--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -7,14 +7,14 @@
         "id": "8b1cd645"
       },
       "source": [
-        "# Workflow task-specifc dataset\n",
+        "# Workflow Feedback Dataset\n",
         "Welcome! This will cover a default workflow from logging data to preparing for training.\n",
         "\n",
         "<div class=\"alert alert-warning\">\n",
         "\n",
         "Warning\n",
         "\n",
-        "This workflow covers the `DatasetForTextClassification`, `DatasetForTokenClassification`, and `DatasetForText2Text``. The workflow for the `FeedbackDataset`, `DatasetForTokenClassification`, and `DatasetForText2Text` can be found [here](/getting_started/quickstart_workflow.html). Not sure which dataset to use? Check out our section on [choosing a dataset](/getting_started/choose_dataset.html).\n",
+        "This workflow covers the `FeedbackDataset`. The workflow for the `DatasetForTextClassification`, `DatasetForTokenClassification`, and `DatasetForText2Text` can be found [here](/getting_started/quickstart_workflow_feedback.html). Not sure which dataset to use? Check out our section on [choosing a dataset](/getting_started/choose_dataset.html).\n",
         "\n",
         "</div>"
       ]
