docs: changed the title

--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -7,7 +7,7 @@
         "id": "8b1cd645"
       },
       "source": [
-        "# Workflow\n",
+        "# Feedback Workflow\n",
         "Welcome! This will cover a default workflow from logging data to preparing for training.\n",
         "\n",
         "<div class=\"alert alert-info\">\n",
