added tutorial parts

--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -2,12 +2,26 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "9ba716c0",
+      "metadata": {},
+      "source": [
+        "<div class=\"alert alert-info\">\n",
+        "\n",
+        "Note\n",
+        "    \n",
+        "This tutorial demonstrates a sample usage for `FeedbackDataset`, which offers implementations different from the old `TextClassificationDataset`, `Text2TextDataset` and `TokenClassificationDataset`. To have info about old datasets, you can have a look at [here](/getting_started/quickstart_workflow.html#Prepare-training-data).\n",
+        "    \n",
+        "</div>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "8b1cd645",
       "metadata": {
         "id": "8b1cd645"
       },
       "source": [
-        "# Argilla Feedback\n",
+        "# Workflow Feedback Dataset\n",
         "\n",
         "Argilla Feedback is a tool designed to obtain and manage both the feedback data from annotators and the suggestions from LLMs.\n"
       ]
@@ -36,7 +50,7 @@
         "After you deploy Argilla on [HF Spaces](https://docs.argilla.io/en/latest/getting_started/quickstart_installation.html#%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%9A%80-Argilla-on-Hugging-Face-Spaces), install the required packages in Colab.\n",
         "\n",
         "```\n",
-        "!pip install argilla ##and other packages\n",
+        "!pip install argilla transformers evaluate datasets -qqq\n",
         "```"
       ]
     },
@@ -56,7 +70,7 @@
         "and install the packages required.\n",
         "\n",
         "```\n",
-        "!pip install argilla ##and other packages\n",
+        "!pip install argilla transformers evaluate datasets -qqq\n",
         "```"
       ]
     },
@@ -115,16 +129,26 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "52213caa",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import argilla as rg\n",
+        "import datasets, transformers, evaluate\n",
+        "from argilla.feedback import ArgillaTrainer, TrainingTask"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "94ecaf52",
       "metadata": {},
       "outputs": [],
       "source": [
-        "```\n",
         "fields = [\n",
-        "    rg.TextField(name=\"question\", required=True)\n",
-        "    rg.TextField(name=\"answer\", required=True, use_markdown=True),\n",
-        "]\n",
-        "```"
+        "    rg.TextField(name=\"question\", required=True),\n",
+        "    rg.TextField(name=\"answer\", required=True, use_markdown=True)\n",
+        "]"
       ]
     },
     {
@@ -144,15 +168,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "```\n",
-        "label_question = rg.LabelQuestion(\n",
-        "    name=\"relevant\",\n",
-        "    title=\"Relevancy\"\n",
-        "    labels={\"YES\": \"Yes\", \"NO\": \"No\"},\n",
-        "    required=True,\n",
-        "    visible_labels=None\n",
-        ")\n",
-        "```"
+        "label_question = [\n",
+        "    rg.LabelQuestion(\n",
+        "        name=\"relevant\",\n",
+        "        title=\"Relevancy\",\n",
+        "        labels={\"YES\": \"Yes\", \"NO\": \"No\"},\n",
+        "        required=True,\n",
+        "        visible_labels=None\n",
+        "    )\n",
+        "]"
       ]
     },
     {
@@ -180,13 +204,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "```\n",
         "dataset = rg.FeedbackDataset(\n",
-        "        guidelines=\"Annotations should be made according to the policy.\",\n",
-        "        fields=[fields],\n",
-        "        questions=[label_question]\n",
-        ")\n",
-        "```"
+        "    guidelines=\"Annotations should be made according to the policy.\",\n",
+        "    fields=fields,\n",
+        "    questions=label_question\n",
+        "    )"
       ]
     },
     {
@@ -194,11 +216,234 @@
       "id": "deb37de2",
       "metadata": {},
       "source": [
-        "## Records\n",
+        "### Records\n",
         "\n",
-        "A record in Argilla refers to a data item that requires annotation and can consist of one or multiple fields i.e., the pieces of information that will be shown to the user in the UI in order to complete the annotation task. This can be, for example, a prompt and output pair in the case of instruction datasets.\n",
+        "A record refers to each of the data items that will be annotated by the annotator team. The records will be the pieces of information that will be shown to the user in the UI in order to complete the annotation task. In the current single label datasest sample, it can only consist of a text to be labeled while it will be a prompt and output pair in the case of instruction datasets.\n",
         "\n",
-        "...\n"
+        "For Argilla Feedback, we can define a `FeedbackRecord` with the mandatory argument `fields`. Records also offer [other optional arguments](/reference/python/python_client.html#argilla.client.feedback.schemas.records.FeedbackRecord) to further augment each record."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "36b9b719",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# A sample FeedbackRecord\n",
+        "record = rg.FeedbackRecord(\n",
+        "    fields={\n",
+        "        \"question\": \"Why can camels survive long without water?\",\n",
+        "        \"answer\": \"Camels use the fat in their humps to keep them filled with energy and hydration for long periods of time.\"\n",
+        "    }\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c5767608",
+      "metadata": {},
+      "source": [
+        "### Suggestions\n",
+        "\n",
+        "Feedback datasets offer the opportunity to add suggested responses to your dataset, which are mainly model predictions for each of your data item. To add model suggestions, we can obtain inferences from a model and those suggested responses to our dataset. For this, let us create a dataset to insert the records with their suggestions."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "39e57c76",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "record.update(\n",
+        "    suggestions=[\n",
+        "        {\n",
+        "        \"question_name\": \"label_question\",\n",
+        "        \"score\": 0.8,\n",
+        "        \"value\": \"YES\"\n",
+        "        }\n",
+        "    ]\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "53af531a",
+      "metadata": {},
+      "source": [
+        "Now, it is quite simple to add records to the FeedbackDataset we have previously created, in the form of a list."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d870269d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dataset.add_records([record])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5ad19311",
+      "metadata": {},
+      "source": [
+        "## Pushing to Argilla\n",
+        "\n",
+        "Now that we have our dataset with already annotated responses and suggestions as model predictions, we can push the dataset to the Argilla space.\n",
+        "\n",
+        "<div class=\"alert alert-info\">\n",
+        "\n",
+        "Note\n",
+        "    \n",
+        "From Argilla 1.14.0, calling `push_to_argilla` will not just push the `FeedbackDataset` into Argilla, but will also return the remote `FeedbackDataset` instance, which implies that the additions, updates, and deletions of records will be pushed to Argilla as soon as they are made. This is a change from previous versions of Argilla, where you had to call `push_to_argilla` again to push the changes to Argilla.\n",
+        "    \n",
+        "</div>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3cfb8b36",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "remote_dataset = dataset.push_to_argilla(name=\"emotion_dataset\", workspace=\"admin\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5a5a3bf3",
+      "metadata": {},
+      "source": [
+        "## Training\n",
+        "\n",
+        "As with other datasets, Feedback datasets also allow to create a training pipeline and make inference with the resulting model. After you gather responses with Argilla Feedback, you can easily fine-tune an LLM. In this example, we will have complete a text classification task.\n",
+        "\n",
+        "For fine-tuning, we will use transformers library and `ArgillaTrainer`, which is a powerful wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract representation to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.\n",
+        "\n",
+        "Let us first create our dataset to train. For this example, we will use [emotion](https://huggingface.co/datasets/argilla/emotion) dataset from Argilla, which was created using Argilla. Each text item has its responses as 6 different sentiments, which are Sadness, Joy, Love, Anger, Fear and Surprise."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "586059d7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#besides Argilla, it can also be imported with load_dataset from datasets\n",
+        "dataset_hf = rg.FeedbackDataset.from_huggingface(\"argilla/emotion\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "861c3648",
+      "metadata": {},
+      "source": [
+        "We can then start to create training pipeline by first defining `TrainingTask`, which is used to define how the data should be processed and formatted according to the associated task and framework. Each task has its own classmethod and the data formatting can always be customized via `formatting_func`. You can visit [here](guides/llms/practical_guides/fine_tune.html#the-trainingtask) for more info. Simpler tasks like text classification can be defined using default definitions, as we do in this example."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "04537510",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "task = TrainingTask.for_text_classification(\n",
+        "    text=dataset_hf.field_by_name(\"text\"),\n",
+        "    label=dataset_hf.question_by_name(\"label\")\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2492e2e2",
+      "metadata": {},
+      "source": [
+        "We can then define our ArgillaTrainer for any of the supported frameworks and customize the training config using ArgillaTrainer.update_config.\n",
+        "\n",
+        "Let us define ArgillaTrainer with any of the supported frameworks. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8187adc1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer = ArgillaTrainer(\n",
+        "    dataset=dataset_hf,\n",
+        "    task=task,\n",
+        "    framework=\"transformers\",\n",
+        "    train_size=0.8\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "1bccf880",
+      "metadata": {},
+      "source": [
+        "You can update the model config via `update_config`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "332a4f1d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.update_config(pretrained_model_name_or_path = \"distilbert-base-uncased\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "ca6d7dc3",
+      "metadata": {},
+      "source": [
+        "We can now train the model with `train`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a144a4a8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.train(output_dir=\"transformers_model\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8ae12a61",
+      "metadata": {},
+      "source": [
+        "and make inferences with `predict`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d7863b92",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.predict(\"This is just perfect!\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "85ad4ad2",
+      "metadata": {},
+      "source": [
+        "We have trained a model with FeedbackDataset in this tutorial. For more info about concepts in Argilla Feedback and LLMs, look at [here](/guides/llms/conceptual_guides/conceptual_guides.html). To see more hands-on tutorials about FeedbackDataset, please look at [here](/guides/llms/practical_guides/practical_guides.html)."
       ]
     },
     {
