refacor of guide structure

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/curating-feedback-instructiondataset.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/curating-feedback-instructiondataset.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Let's get started!\n",
     "\n",
-    "<img src=\"../../../_static/images/llms/curating-feedback-instructiondataset/snapshot_dolly_curation.png\" alt=\"A Feedback Task setting for the curation of Databricks' Dolly dataset\" style=\"width: 1100px;\">\n",
+    "<img src=\"/_static/images/llms/curating-feedback-instructiondataset/snapshot_dolly_curation.png\" alt=\"A Feedback Task setting for the curation of Databricks' Dolly dataset\" style=\"width: 1100px;\">\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "\n",
