--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-openai-rag-feedback.ipynb
@@ -34,14 +34,14 @@
         "You can also browse the [datasets hosted with Argilla Hugging Face Spaces](https://huggingface.co/spaces/argilla/fine-tune-chat-gpt). User and password: argilla / 12345678. The dataset for this stage is `customer-assistant` and for the evaluation step is `finetuned-vs-base-preference`.\n",
         "\n",
         "\n",
-        "![Human preference](../../../_static/images/llms/fine-tuning-openai-rag-feedback/preference-fine-tuned.png \"Fine-tuned model vs base model response\")\n",
+        "![Human preference](/_static/images/llms/fine-tuning-openai-rag-feedback/preference-fine-tuned.png \"Fine-tuned model vs base model response\")\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "By the end of the tutorial, you'll be using a fine-tuned model for RAG and have an human evaluation workflow in place to continously evaluate your LLM application (see below for a comparison of the base gpt3.5 vs the fine-tuned gpt3.5 for this application).\n",
         "\n",
-        "![Fine-tuned model vs base model](../../../_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")\n",
+        "![Fine-tuned model vs base model](/_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")\n",
         "\n",
         "\n",
         "Let's get started!\n",
@@ -599,7 +599,7 @@
         "\n",
         "For the tutorial, we only have one user but Argilla Feedback is fully multi-user, which means you can collect feedback from several users for each data point, increasing the quality of the evaluation. \n",
         "\n",
-        "You can read more about multi-user scenarios and built-in unification methods [on this guide](https://docs.argilla.io/en/latest/guides/llms/practical_guides/collect_responses.html).\n",
+        "You can read more about multi-user scenarios and built-in unification methods [on this guide](/practical_guides/collect_responses.html).\n",
         "\n",
         "With a very small evaluation set, we can see that the fine-tuned model responses are preferred ~60% of the time, 3x over the base model, and they are both equally good or bad ~20% of the time. \n",
         "\n",
@@ -607,7 +607,7 @@
         "Even with a very small fine-tuning and evaluation dataset, this already shows **promising benefits of fine-tuning models for enhancing RAG systems**.\n",
         "\n",
         "\n",
-        "![Fine-tuned model vs base model](../../../_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")"
+        "![Fine-tuned model vs base model](/_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")"
       ]
     },
     {
