--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/trainer-feedback-setfit.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/trainer-feedback-setfit.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "In this example, we will show how to use the `ArgillaTrainer` to fine-tune a SetFit model on a `FeedbackDataset` made of categorical questions like `LabelQuestion` and `MultiLabelQuestion`.\n",
     "\n",
-    "We will start from this [tutorial for setfit](https://docs.argilla.io/en/latest/guides/llms/examples/labelling-feedback-setfit.html), using the same dataset and adapting it to the new trainer class. Some background can be found in [this ArgillaTrainer guide](https://docs.argilla.io/en/latest/guides/llms/practical_guides/fine_tune_others.html#an-end-to-end-example) if needed.\n",
+    "We will start from this [tutorial for setfit](https://docs.argilla.io/en/latest/guides/llms/examples/labelling-feedback-setfit.html), using the same dataset and adapting it to the new trainer class. Some background can be found in this [ArgillaTrainer guide](/practical_guides/fine_tune.html) if needed.\n",
     "\n",
     "Let's get started!\n",
     "\n",
