--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "Let's get started!\n",
         "\n",
-        "<img src=\"../../../_static/images/llms/rm.svg\" alt=\"Comparison collection for Reward Modeling\" style=\"display:block;margin-left:auto;margin-right:auto;\">\n",
+        "<img src=\"/_static/images/llms/rm.svg\" alt=\"Comparison collection for Reward Modeling\" style=\"display:block;margin-left:auto;margin-right:auto;\">\n",
         "\n",
         "<div class=\"alert alert-info\">\n",
         "\n",
@@ -477,7 +477,7 @@
         "Now the dataset is ready for labelling. This is the Feedback UI we have just configured:\n",
         "\n",
         "\n",
-        "<img src=\"../../../_static/images/llms/reward-model-ui.png\" alt=\"A Feedback Task setting for the reward modeling\" style=\"width: 1100px;\">\n",
+        "<img src=\"/_static/images/llms/reward-model-ui.png\" alt=\"A Feedback Task setting for the reward modeling\" style=\"width: 1100px;\">\n",
         "\n"
       ]
     },
