updated paths to figures

--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_data_with_semantic_search.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_data_with_semantic_search.ipynb
@@ -13,7 +13,7 @@
     "- 🙃 upload the dataset into Argilla for data labeling\n",
     "- 🏷 use the similarity search feature to efficiently find an label bulks of semantically-related examples\n",
     "\n",
-    "<img src=\"../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/4.png\" alt=\"Similarity search\" style=\"width: 1100px;\">"
+    "<img src=\"/_static/tutorials/labelling-textclassification-sentence-transformers-semantic/4.png\" alt=\"Similarity search\" style=\"width: 1100px;\">"
    ]
   },
   {
@@ -326,7 +326,7 @@
     "### Label a record\n",
     "Using the hand-labeling mode, you can label a record like the one below:\n",
     "\n",
-    "![labeling-textclassification-sentence-transformers-semantic](../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/6.png)\n",
+    "![labeling-textclassification-sentence-transformers-semantic](/_static/tutorials/labelling-textclassification-sentence-transformers-semantic/6.png)\n",
     "\n",
     "Now if you want to find semantically similar or even duplicates of this record you can use the Find similar button. \n",
     "\n",
@@ -342,7 +342,7 @@
     "    \n",
     "</div>\n",
     "\n",
-    "![labeling-textclassification-sentence-transformers-semantic](../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/4.png)\n",
+    "![labeling-textclassification-sentence-transformers-semantic](/_static/tutorials/labelling-textclassification-sentence-transformers-semantic/4.png)\n",
     "\n",
     "As you can see the model is effectively capturing similar meaning without the need of explicit shared words: e.g., `details` vs `information`.\n",
     "\n",
@@ -350,7 +350,7 @@
     "At this point, you can label the records one by one or scroll-down to review them before using the bulk-labeling button on the top of the records list.\n",
     "\n",
     "\n",
-    "![labeling-textclassification-sentence-transformers-semantic](../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/3.png)\n",
+    "![labeling-textclassification-sentence-transformers-semantic](/_static/tutorials/labelling-textclassification-sentence-transformers-semantic/3.png)\n",
     "\n",
     "### Bulk label\n",
     "\n",
@@ -363,9 +363,9 @@
     "For other use cases, you might need to be more careful and combine this feature with search queries and filters. For quick experimentation, you can also assume you'll make some labelling errors and then use tools like `cleanlab` for detecting label errors.\n",
     "</div>\n",
     "\n",
-    "![labeling-textclassification-sentence-transformers-semantic](../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/2.png)\n",
+    "![labeling-textclassification-sentence-transformers-semantic](/_static/tutorials/labelling-textclassification-sentence-transformers-semantic/2.png)\n",
     "\n",
-    "![labeling-textclassification-sentence-transformers-semantic](../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/1.png)\n",
+    "![labeling-textclassification-sentence-transformers-semantic](/_static/tutorials/labelling-textclassification-sentence-transformers-semantic/1.png)\n",
     "\n",
     "\n",
     "\n",
