--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_errors_cleanlab.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_errors_cleanlab.ipynb
@@ -15,7 +15,7 @@
     "- 🧐 use *cleanlab* via *Argilla* and get potential label error candidates in the test set;\n",
     "- 🖍 uncover and correct label errors quickly and comfortably with the *Argilla* web app;\n",
     "\n",
-    "![monitoring-textclassification-cleanlab-explainability](../../_static/tutorials/monitoring-textclassification-cleanlab-explainability/monitoring-textclassification-cleanlab-explainability.png)"
+    "![monitoring-textclassification-cleanlab-explainability](/_static/tutorials/monitoring-textclassification-cleanlab-explainability/monitoring-textclassification-cleanlab-explainability.png)"
    ]
   },
   {
