--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/weak_supervision_ner.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/weak_supervision_ner.ipynb
@@ -24,7 +24,7 @@
     "- We then log the labelled documents to Argilla and visualize the results via its web app.\n",
     "- After aggregating the noisy labels, we fine-tune and evaluate a spaCy NER model.\n",
     "\n",
-    "![labelling-tokenclassification-skweak-weaksupervision](../../_static/tutorials/labelling-tokenclassification-skweak-weaksupervision/labelling-tokenclassification-skweak-weaksupervision.png)"
+    "![labelling-tokenclassification-skweak-weaksupervision](/_static/tutorials/labelling-tokenclassification-skweak-weaksupervision/labelling-tokenclassification-skweak-weaksupervision.png)"
    ]
   },
   {
