docs: new quickstart workflow for Feedback Dataset (#3721)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

We created a new workflow for the feedback dataset

Closes #3719 
**Type of change**

(Remember to title the PR according to the type of change)

- [X] Documentation update

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes.)

- [ ] `sphinx-autobuild` (read [Developer
Documentation](https://docs.argilla.io/en/latest/community/developer_docs.html#building-the-documentation)
for more details)

**Checklist**

- [ ] I added relevant documentation
- [ ] I followed the style guidelines of this project
- [ ] I did a self-review of my code
- [ ] I made corresponding changes to the documentation
- [ ] My changes generate no new warnings
- [ ] I filled out [the contributor form](https://tally.so/r/n9XrxK)
(see text above)
- [ ] I have added relevant notes to the `CHANGELOG.md` file (See
https://keepachangelog.com/)

---------

Co-authored-by: kursat <86690946+kursathalat@users.noreply.github.com>

--- a/docs/_source/getting_started/quickstart_workflow.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow.ipynb
@@ -7,7 +7,7 @@
         "id": "8b1cd645"
       },
       "source": [
-        "# Workflow task-specifc dataset\n",
+        "# Workflow other datasets\n",
         "Welcome! This will cover a default workflow from logging data to preparing for training.\n",
         "\n",
         "<div class=\"alert alert-warning\">\n",
@@ -2498,7 +2498,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.12"
+      "version": "3.8.17"
     },
     "vscode": {
       "interpreter": {
