docs: update `python -m argilla` commands

--- a/docs/_source/guides/label_records_with_semanticsearch.ipynb
+++ b/docs/_source/guides/label_records_with_semanticsearch.ipynb
@@ -77,7 +77,7 @@
     "```bash\n",
     "docker-compose -f docker-compose.opensearch.yaml up\n",
     "```\n",
-    "Once the service is up you can launch the Argilla Server with `python -m argilla`.\n",
+    "Once the service is up you can launch the Argilla Server with `argilla server start`.\n",
     "\n",
     "### Elasticsearch backend\n",
     "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Elasticsearch by downloading the [docker-compose.yaml](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker-compose.elasticsearch.yaml) and running:\n",
@@ -85,7 +85,7 @@
     "```bash\n",
     "docker-compose -f docker-compose.elasticsearch.yaml up\n",
     "```\n",
-    "Once the service is up you can launch the Argilla Server with `python -m argilla`.\n",
+    "Once the service is up you can launch the Argilla Server with `argilla server start`.\n",
     "\n",
     "#### Migrate from 7.1.0 to 8.5\n",
     "<div class=\"alert alert-warning\">\n",
