--- a/docs/_source/tutorials/notebooks/deploying-textclassification-colab-activelearning.ipynb
+++ b/docs/_source/tutorials/notebooks/deploying-textclassification-colab-activelearning.ipynb
@@ -145,10 +145,10 @@
     "id": "axtfY-QyLnCW"
    },
    "source": [
-    "You now need to start Argilla localhost in separate terminal. We cannot just run `!python -m argilla` in a code cell on Colab, because the cell will run indefinitely and block us from running other cells. We therefore need to open a separate terminal to run Argilla.\n",
+    "You now need to start Argilla localhost in separate terminal. We cannot just run `!argilla server start` in a code cell on Colab, because the cell will run indefinitely and block us from running other cells. We therefore need to open a separate terminal to run Argilla.\n",
     "\n",
-    "1. Option with Colab Pro: Open the Colab Pro terminal (button to the bottom left) and type in the terminal: `python -m argilla`\n",
-    "2. Option without Colab Pro: Run the following code cell to get a free terminal window in the code cell with [xterm](https://github.com/InfuseAI/colab-xterm). Then type `python -m argilla` in the terminal window"
+    "1. Option with Colab Pro: Open the Colab Pro terminal (button to the bottom left) and type in the terminal: `argilla server start`\n",
+    "2. Option without Colab Pro: Run the following code cell to get a free terminal window in the code cell with [xterm](https://github.com/InfuseAI/colab-xterm). Then type `argilla server start` in the terminal window"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "# create a terminal to run Argilla with, in case you don't have Colab Pro.\n",
-    "# type \"python -m argilla\" into the terminal that appears below this code cell.\n",
+    "# type \"argilla server start\" into the terminal that appears below this code cell.\n",
     "%load_ext colabxterm\n",
     "%xterm"
    ]
